Map Range node in the compositor has max values = 0 #98322

Closed
opened 2022-05-22 23:10:34 +02:00 by Yegor · 6 comments

System Information
Operating system: Linux-3.10.0-1160.el7.x86_64-x86_64-with-glibc2.17 64 Bits
Graphics card: GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.80

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-20 22:53, hash: dfb8c90324, 3.2, 3.1

Short description of error
Map range node in the compositor has 'from max' and 'to max' values = 0

Exact steps for others to reproduce the error
Open the compositor, create the node

**System Information** Operating system: Linux-3.10.0-1160.el7.x86_64-x86_64-with-glibc2.17 64 Bits Graphics card: GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.80 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-20 22:53, hash: `dfb8c90324`, 3.2, 3.1 **Short description of error** Map range node in the compositor has 'from max' and 'to max' values = 0 **Exact steps for others to reproduce the error** Open the compositor, create the node
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov

Added subscribers: @Blendify, @deadpin

Added subscribers: @Blendify, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Looks like the defaults were broken when the new socket builder was used: 5ef5a9fc24. I tried going through the diff again to spot other differences but this seems like the only node that got lost in translation.

CC @Blendify

Looks like the defaults were broken when the new socket builder was used: 5ef5a9fc24. I tried going through the diff again to spot other differences but this seems like the only node that got lost in translation. CC @Blendify

This issue was referenced by 568b692bcf

This issue was referenced by 568b692bcf8619ae057a0e604bf6e9e2ad89a15c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Aaron Carlisle self-assigned this 2022-05-23 03:56:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98322
No description provided.