Compositor: Fix Map Range node To/From Max default value

Mistake from rB5ef5a9fc24668aa264fe0558db9c0fb1246aa37f

Fixes T98322