source/blender/nodes/composite/nodes/node_composite_map_range.cc
@@ -18,9 +18,9 @@ static void cmp_node_map_range_declare(NodeDeclarationBuilder &b)
 {
   b.add_input<decl::Float>(N_("Value")).default_value(1.0f).min(0.0f).max(1.0f);
   b.add_input<decl::Float>(N_("From Min")).default_value(0.0f).min(-10000.0f).max(10000.0f);
-  b.add_input<decl::Float>(N_("From Max")).default_value(0.0f).min(-10000.0f).max(10000.0f);
+  b.add_input<decl::Float>(N_("From Max")).default_value(1.0f).min(-10000.0f).max(10000.0f);
   b.add_input<decl::Float>(N_("To Min")).default_value(0.0f).min(-10000.0f).max(10000.0f);
-  b.add_input<decl::Float>(N_("To Max")).default_value(0.0f).min(-10000.0f).max(10000.0f);
+  b.add_input<decl::Float>(N_("To Max")).default_value(1.0f).min(-10000.0f).max(10000.0f);
   b.add_output<decl::Float>(N_("Value"));
 }
 
